--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,10 +9,10 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Center" FontSize="60" Margin="126,58,112,0" TextWrapping="Wrap" Text="Taboo" VerticalAlignment="Top"  RenderTransformOrigin="0.152,0.434"/>
-        <TextBlock HorizontalAlignment="Center" FontSize="20" Margin="69,163,56,0" TextWrapping="Wrap" Text="Race against time and friends" VerticalAlignment="Top" Width="275" FontStyle="Italic" RenderTransformOrigin="0.152,0.434"/>
+        <TextBlock HorizontalAlignment="Center" FontSize="60" Margin="0,58,0,0" TextWrapping="Wrap" Text="Taboo" VerticalAlignment="Top" Width="400" TextAlignment="Center"/>
+        <TextBlock HorizontalAlignment="Center" FontSize="20" Margin="10,163,10,0" TextWrapping="Wrap" Text="Race against time and friends" VerticalAlignment="Top" TextAlignment="Center" Width="380" FontStyle="Italic" RenderTransformOrigin="0.152,0.434"/>
         <ListBox HorizontalAlignment="Center" Height="40" Margin="69,256,68,0" VerticalAlignment="Top" Width="263"/>
-        <Button Content="PLAY" HorizontalAlignment="Center" Margin="146,369,145,0" VerticalAlignment="Top"/>
+        <Button Content="PLAY" HorizontalAlignment="Center" Margin="146,369,145,0" VerticalAlignment="Top" Click="Button_Click"/>
         <Button Content="HELP" HorizontalAlignment="Center" Margin="146,432,145,0" VerticalAlignment="Top" />
 
     </Grid>
