--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,19 +1,24 @@
 <Page
-    x:Class="App1.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:App1"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+x:Class="App1.MainPage"
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:local="using:App1"
+xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+mc:Ignorable="d"
+Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Grid>
-        <TextBlock HorizontalAlignment="Center" FontSize="60" Margin="0,58,0,0" TextWrapping="Wrap" Text="Taboo" VerticalAlignment="Top" Width="400" TextAlignment="Center"/>
-        <TextBlock HorizontalAlignment="Center" FontSize="20" Margin="10,163,10,0" TextWrapping="Wrap" Text="Race against time and friends" VerticalAlignment="Top" TextAlignment="Center" Width="380" FontStyle="Italic" RenderTransformOrigin="0.152,0.434"/>
-        <ListBox HorizontalAlignment="Center" Height="40" Margin="69,256,68,0" VerticalAlignment="Top" Width="263"/>
-        <Button Content="PLAY" HorizontalAlignment="Center" Margin="146,369,145,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <TextBlock HorizontalAlignment="Center" FontSize="60" Margin="126,58,112,0" TextWrapping="Wrap" Text="Taboo" VerticalAlignment="Top" RenderTransformOrigin="0.152,0.434"/>
+        <TextBlock HorizontalAlignment="Center" FontSize="20" Margin="69,163,56,0" TextWrapping="Wrap" Text="Race against time and friends" VerticalAlignment="Top" Width="275" FontStyle="Italic" RenderTransformOrigin="0.152,0.434"/>
+        <ListBox x:Name="lb" Background="Black" Foreground="White" BorderBrush="AntiqueWhite"  Height="40" Margin="69,288,68,0"  VerticalAlignment="Top" Width="263">
+            <x:String>1</x:String>
+            <x:String>2</x:String>
+            <x:String>3</x:String>
+            <x:String>4</x:String>
+            <x:String>5</x:String>
+        </ListBox>
+        <Button Content="PLAY" HorizontalAlignment="Center" Margin="146,369,145,0" VerticalAlignment="Top"/>
         <Button Content="HELP" HorizontalAlignment="Center" Margin="146,432,145,0" VerticalAlignment="Top" />
-
+        <TextBlock HorizontalAlignment="Left" Margin="146,249,0,0" TextWrapping="Wrap" Text="No of Team Members:" VerticalAlignment="Top" Height="16" Width="132"/>
     </Grid>
 </Page>
