--- a/BlankPage1.xaml
+++ b/BlankPage1.xaml
@@ -14,9 +14,10 @@
         <TextBlock HorizontalAlignment="Center" Margin="10,256,10,0" FontSize="30" TextWrapping="Wrap" Text="Word2" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
         <TextBlock HorizontalAlignment="Center" Margin="10,327,10,0" FontSize="30" TextWrapping="Wrap" Text="Word3" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
         <TextBlock HorizontalAlignment="Center" Margin="10,388,10,0" FontSize="30" TextWrapping="Wrap" Text="Word4" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
-        <Button Content="HIT" HorizontalAlignment="Left" Margin="251,485,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.789,0.546"/>
-        <Button Content="SKIP" HorizontalAlignment="Left" Margin="37,485,0,0" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" FontSize="20" Margin="37,594,0,0" TextWrapping="Wrap" Text="Score:-" VerticalAlignment="Top"/>
+        <Button Content="HIT" HorizontalAlignment="Left" Margin="251,485,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.789,0.546" Click="Button_Click"/>
+        <Button Content="SKIP" HorizontalAlignment="Left" Margin="37,485,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
+        <TextBlock Name="tb5" HorizontalAlignment="Left" FontSize="20" Margin="37,594,0,0" TextWrapping="Wrap" Text="Score:-" VerticalAlignment="Top"/>
+        <TextBlock Name="Countdown" FontSize="30" HorizontalAlignment="Left" Margin="278,26,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="114"/>
 
     </Grid>
 </Page>
