--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,8 +1,8 @@
 <Page
-x:Class="App1.MainPage"
+x:Class="Taboo.MainPage"
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-xmlns:local="using:App1"
+xmlns:local="Taboo:App1"
 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 mc:Ignorable="d"
@@ -10,7 +10,7 @@ Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Grid>
         <TextBlock HorizontalAlignment="Center" FontSize="60" Margin="0,58,0,0" TextWrapping="Wrap" Text="Taboo" VerticalAlignment="Top" Width="400" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Center" FontSize="20" Margin="10,163,10,0" TextWrapping="Wrap" Text="Race against time and friends" VerticalAlignment="Top" TextAlignment="Center" Width="380" FontStyle="Italic" RenderTransformOrigin="0.152,0.434"/>
-        <ListBox x:Name="lb" Background="Black"  Foreground="White" AllowDrop="True" BorderBrush="AntiqueWhite" Height="64" Margin="70,246,63,0" VerticalAlignment="Top" >
+        <ListBox x:Name="lb" Background="Black" Foreground="White" AllowDrop="True" BorderBrush="AntiqueWhite" Height="64" Margin="70,246,63,0" VerticalAlignment="Top" >
             <x:String>1</x:String>
             <x:String>2</x:String>
             <x:String>3</x:String>
@@ -20,5 +20,4 @@ Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Button Name="Play" Content="PLAY" HorizontalAlignment="Center" Margin="146,369,145,0" VerticalAlignment="Top" Click="Button_Click"/>
         <Button Content="HELP" HorizontalAlignment="Center" Margin="146,432,145,0" VerticalAlignment="Top" Click="Button_Click_1" />
     </Grid>
-    
 </Page>
