--- a/WordPage.xaml
+++ b/WordPage.xaml
@@ -8,14 +8,15 @@ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 mc:Ignorable="d"
 Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Grid>
-        <TextBlock HorizontalAlignment="Center" TextAlignment="Center" FontSize="60" Margin="0,80,0,0" TextWrapping="Wrap" Text="Word" VerticalAlignment="Top" Width="400"/>
-        <TextBlock HorizontalAlignment="Center" Margin="0,192,0,0" FontSize="30" TextWrapping="Wrap" Text="Word1" VerticalAlignment="Top" TextAlignment="Center" Width="400"/>
-        <TextBlock HorizontalAlignment="Center" Margin="10,256,10,0" FontSize="30" TextWrapping="Wrap" Text="Word2" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
-        <TextBlock HorizontalAlignment="Center" Margin="10,327,10,0" FontSize="30" TextWrapping="Wrap" Text="Word3" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
-        <TextBlock HorizontalAlignment="Center" Margin="10,388,10,0" FontSize="30" TextWrapping="Wrap" Text="Word4" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
+        <TextBlock Name="txtb1" HorizontalAlignment="Center" TextAlignment="Center" FontSize="60" Margin="0,80,0,0" TextWrapping="Wrap" Text="Word" VerticalAlignment="Top" Width="400"/>
+        <TextBlock Name="txtb2" HorizontalAlignment="Center" Margin="0,197,0,0" FontSize="30" TextWrapping="Wrap" Text="Word1" VerticalAlignment="Top" TextAlignment="Center" Width="400"/>
+        <TextBlock Name="txtb3" HorizontalAlignment="Center" Margin="12,250,8,0" FontSize="30" TextWrapping="Wrap" Text="Word2" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
+        <TextBlock Name="txtb4" HorizontalAlignment="Center" Margin="10,303,10,0" FontSize="30" TextWrapping="Wrap" Text="Word3" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
+        <TextBlock Name="txtb5" HorizontalAlignment="Center" Margin="10,357,10,0" FontSize="30" TextWrapping="Wrap" Text="Word4" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
         <Button Content="HIT" HorizontalAlignment="Left" Margin="251,485,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.789,0.546" Click="Button_Click"/>
         <Button Content="SKIP" HorizontalAlignment="Left" Margin="37,485,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
         <TextBlock Name="tb5" HorizontalAlignment="Left" FontSize="20" Margin="37,577,0,0" TextWrapping="Wrap" Text="Score:    Team 1: 0    Team 2: 0" VerticalAlignment="Top" Height="41"/>
         <TextBlock Name="Countdown" FontSize="30" HorizontalAlignment="Left" Margin="278,26,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="114"/>
+        <TextBlock Name="txtb6" HorizontalAlignment="Center" Margin="10,409,10,0" FontSize="30" TextWrapping="Wrap" Text="Word5" VerticalAlignment="Top" TextAlignment="Center" Width="380"/>
     </Grid>
 </Page>
